# quickjs-typescript-compiler

./: .gitignore  .npmrc  .stylelintrc.js  README-DEV.md  README.md  TODO.md  debug-atoms.js  jest.config.js  opcode.config.ts  opcodes.config.json  package.json  pnpm-lock.yaml  test-wasm.ts  tmp-hoist.ts  tsconfig.json  types.d.ts
__tests__/: arrays.js  arrays.ts  arrow-fn.ts  async-gen-forof.js  async-gen-forof.ts  atoms.test.ts  bigint-fold.ts  binding-maps.test.ts  bytecode-alignment.test.ts  bytecode.test.ts  call.js  call.ts  class-basic.ts  class-extends-static.ts  closure-basic.ts  closure-const-write.ts  closure-mutate.ts  closure-nested.ts  closure-param-capture.ts  closure-sibling-dedup.ts  compound-assign.ts  compute.js  compute.ts  controlFlow.test.ts  controlflow_labeled_1.js  controlflow_labeled_1.ts  controlflow_labeled_2.js  controlflow_labeled_2.ts  debug-options.ts  disasm.test.ts  elem_postfix.ts  elem_postfix_local.js  elem_postfix_local.ts  elem_prefix_local.js  elem_prefix_local.ts  forin-empty-dynamic.ts  forin-proto-symbol.ts  forof-break-return.ts  forof-finally.ts  forof-return-close.ts  (+32 more)
artifacts/: array-literal-mixed.analysis.json  array-literal-mixed.report.md  array-literal-mixed.ts.disasm  arrow_ts.json  (+161 more)
cpp/QuickJS/bytecode_wasm/: CMakeLists.txt  QuickJSBytecodeBinding.cpp  QuickJSBytecodeBinding.h  TaroJSBytecode.cpp
cpp/QuickJS/bytecode_wasm/examples/: index.js  package.json  pnpm-lock.yaml  test.js
cpp/QuickJS/bytecode_wasm/examples/demo/: index.js  vendor.js
cpp/QuickJS/bytecode_wasm/examples/index/: data.js  index.js  vendor.js
(+211 files in other folders)
